# fastapi_contratos

./: .env.sample  README.md  contratos.db  openapi.json  pyproject.toml  roteiro.md
.agents/skills/analisador-consumo/: SKILL.md
.agents/skills/analisador-consumo/output/: 7004166210_lote2_consumo.md  7004259206_consumo.md  7004259206_projecao_consumo.html  output_projecao_consumo.html
.agents/skills/analisador-contratual/: SKILL.md
.agents/skills/analisador-contratual/output/: 7004166210_analise_contratual.html  7004166210_analise_contratual.txt  7004259206_analise_contratual.html  7004259206_analise_contratual.txt  generate_pdf.py
.agents/skills/analisador-memorial/: SKILL.md
.agents/skills/analisador-memorial/output/: 7004166210_analise_memorial.html  7004166210_analise_memorial.txt  7004259206_analise_memorial.html  7004259206_analise_memorial.txt  7004259206_create_pdf.py  create_pdf.py
.agents/skills/analisador-precos/: SKILL.md  outputǀ4166210_precos.md  temp_extract.py
.agents/skills/analisador-sms/: SKILL.md
.agents/skills/coordenador-contrato/: SKILL.md
.agents/skills/gerador-checklist-contratual/: SKILL.md
.agents/skills/ingestao-metadados/: SKILL.md
.agents/skills/projetor-consumo/: SKILL.md
.agents/skills/reconhecimento-estratificacao/: SKILL.md
api/: biblioteca_api.py  database.py  db_models.py  main.py  models.py  test_db.py  test_extract.py  utils.py
api/routers/: auth_router.py  contratos_router.py
api/services/: llm_service.py
specs/: documento_inicial.md  pdf_text.txt  persistencia_analise.md
(+11 files in other folders)
