[project]
name = "pos-t2-aula-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.14.4",
    "fastapi-mcp>=0.4.0",
    "fastapi[standard]>=0.136.1",
    "google-genai>=2.9.0",
    "ipykernel>=7.2.0",
    "langchain>=1.3.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.2",
    "pre-commit>=4.6.0",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "pymupdf>=1.27.2.3",
    "requests>=2.34.2",
    "ruff>=0.15.13",
]
